[package]
name = "texas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
flume = "0.10.14"
itertools = "0.10.5"
prost = "0.11.6"
prost-types = "0.11.6"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = "1.24.2"
tokio-stream = "0.1.11"
tonic = "0.8.3"

[build-dependencies]
tonic-build = { version = "0.8.4", features = ["prost"] }
